syntax="proto3";

option go_package = "./proto";

package greet_service;

service GreetService{
    // send a req to client with no params and return [HelloResponse] from server
    rpc SayHello (NoParam) returns (HelloResponse);

    // send a list of strings from client and get a stream response
    // server will return a stream of data saying hello to each name
    rpc SayHelloServerStreaming (NamesList) returns (stream HelloResponse);

    rpc SayHelloClientStreaming (stream HelloRequest) returns (MessagesList);

    rpc SayHelloBiDirectionalStreaming (stream HelloRequest) returns (stream HelloResponse);
}

message NoParam{};

message HelloResponse{
    string message = 1;
}

message HelloRequest{
    string name = 1;
}

message NamesList{
    repeated string names = 1;
}

message MessagesList{
    repeated string messages = 1;
}